# notes

./: .gitignore  README.md  index.md  main.py  my-style.css  myst.yml  pyproject.toml  qq.py
examples/custom-warmup-bundle/: README.md  pom.xml
examples/diversity/: README.md  services.xml
examples/ignore-fill-bundle/: README.md  pom.xml
examples/inner-rank-profile-naming-conflict/: README.md  services.xml
examples/match-features-mapper-bundle/: README.md  pom.xml
examples/multifill-omit-summary-features/: README.md
examples/services-xml-tricks/: README.md  services.xml  session.ipynb  validation-overrides.xml
examples/vespa-on-graalvm/: .vespaignore  (+3 more)
mycode/: test.py  vap.py
notebooks/: README.md  acorn-experiments.ipynb  beating-query-planner.ipynb  chunks-and-entities.ipynb  failed-range-filter-hack.ipynb  first.ipynb  index.md  match-phase-fast-search.ipynb  nearest-neighbor-nuances.ipynb  nested-array-grouping.ipynb  no-warmup.ipynb  rrf-distilation.ipynb  vespa-devex.ipynb  vespa-diversity-match-phase.ipynb  vespa-hex-encoding.ipynb  vespa-ignoring-fill.ipynb  vespa-match-features-always-returned.ipynb  vespa-match-features-remap.ipynb  vespa-summary-features-in-grouping.ipynb  vespa-summary-fields.ipynb  vespa-trace-internal-document-id.ipynb
scratch/: chunking.md  embedding.md
slides/: intro.md
vespa/: README.md  acorn.md  beating-query-planner.md  devex.md  exact-nearest-neighbor-and-target-hits.md  exact-nearest-neighbors.md  hybrid-search-enn-weakand.md  intro.md  range-filter-hacking.md  range-filter-ordering.md  summary.md  tracing.md
(+53 files in other folders)
