[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyvespa==0.62",
    "ipykernel>=6.30.1",
    "jupyter-book>=2.0.0b3",
    "jupyter-server>=2.17.0",
    "jupyterlab>=4.4.7",
    "mystmd==1.6.3",
    "matplotlib".
]
